# grabbit-smart-contracts

./: .envrc  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  cabal.project.onchain  flake.nix
browser/src/: index.ts
browser/src/contracts/: helpers.ts  mint.ts  refundAll.ts  types.ts
browser/src/contracts/auction/: common.ts  private.ts  public.ts
browser/src/contracts/helpers/: contract.ts
browser/src/contracts/market/: mint.ts  reference.ts
browser/src/contracts/nft/: bulk.ts  mint.ts  onchainMint.ts  onchainTypes.ts  schema.ts  types.ts
browser/src/data/: converstion.ts  datums.ts  plutus-encoder.ts  schema.ts
browser/src/plutus/: plutus.ts
browser/src/services/: types.ts
browser/src/services/nft-script-compiler/: index.ts
browser/src/services/script-compiler/: index.ts
browser/src/services/script-compiler/auction/: instances.json
browser/src/services/script-compiler/market/: instances.json
common/: .ghcid  vulcan-common.cabal
common/src/Ledger/: Orphans.hs
common/src/Ledger/Exports/: V1.hs  V2.hs
common/src/Vulcan/Common/: Constants.hs  Utils.hs
common/src/Vulcan/Common/Types/: Auction.hs  FinSet.hs  Instances.hs  SpecialUtxo.hs
common/src/Vulcan/Initialisation/: Parameters.hs
compiled/auxiliary/: bulkMintingPolicy.plutus  directOffer.plutus  metadataControlEvolveNFT.plutus  metadataControlFT.plutus  onchainFT.plutus  onchainNFT.plutus  sequenceValidator.plutus
compiled/market/: index.js  marketMP.plutus  marketValidator.plutus
compiled/noTrace/: bulkMintingPolicy.plutus  directOffer.plutus  finSetScript.plutus  finSetSepScript.plutus  finSetValidator.plutus  index.js  privStateTokenScript.plutus  privateAuctionValidator.plutus  pubStateTokenScript.plutus  publicAuctionValidator.plutus  seqStateMintingPolicy.plutus  sequenceValidator.plutus  sequentialNFTMintingPolicy.plutus
compiled/withTrace/: finSetScript.plutus  finSetSepScript.plutus  finSetValidator.plutus  privStateTokenScript.plutus  privateAuctionValidator.plutus  pubStateTokenScript.plutus  publicAuctionValidator.plutus  seqStateMintingPolicy.plutus  sequentialNFTMintingPolicy.plutus
docker/: nix.conf
nix/: vulcan-server-service.nix
onchain/: .ghcid  vulcan-scripts.cabal
onchain/app/vulcan-scripts-compile/: Main.hs
onchain/app/vulcan-server/: Main.hs
onchain/src/: PPrelude.hs
onchain/src/Network/Wai/Middleware/Cors/: JsonCors.hs
onchain/src/Scripts/V2/: Serialize.hs
onchain/src/Vulcan/: Compile.hs  Config.hs  Utils.hs
onchain/src/Vulcan/Onchain/Auction/StateMP/: Common.hs  Private.hs  Public.hs
onchain/src/Vulcan/Onchain/Auction/Validator/: Common.hs  Helpers.hs  Private.hs  Public.hs
onchain/src/Vulcan/Onchain/Collections/: BulkMint.hs  DirectTransfer.hs  MerkleTree.hs  OnchainFTMint.hs  SequentialMint.hs  Utils.hs
onchain/src/Vulcan/Onchain/FinSet/: Validator.hs
onchain/src/Vulcan/Onchain/FinSet/MP/: Common.hs  Helpers.hs  Separator.hs  Standard.hs
onchain/src/Vulcan/Onchain/Market/: MP.hs  Validator.hs
onchain/src/Vulcan/Onchain/Metadata/: Constants.hs  Crypto.hs  LauchpadThreads.hs  NFTLaunchpad.hs  OnchainNFTMint.hs  Types.hs
onchain/src/Vulcan/Onchain/NFT/: MP.hs
onchain/src/Vulcan/SpecialUTxO/: Types.hs  Utils.hs
onchain/src/Vulcan/Types/: Auction.hs  FinSet.hs  Market.hs  State.hs
onchain/src/Vulcan/Utils/: List.hs  Patterns.hs  Prelude.hs  Scripts.hs  Value.hs
onchain/test/: PlutarchMain.hs  Spec.hs
onchain/test/PlutarchEval/: Test.hs
onchain/test/Test/Vulcan/: CommonInputs.hs
onchain/test/Test/Vulcan/Unit/: Debug.hs  Term.hs
onchain/test/Test/Vulcan/Unit/Auction/: Private.hs  Public.hs
onchain/test/Test/Vulcan/Unit/Auction/Private/: BidAct.hs  BuyNowAct.hs  CancelAct.hs  ExtendAct.hs  IssuePaddleAct.hs  RefundAct.hs  ResolveAct.hs  UnregisterAct.hs
onchain/test/Test/Vulcan/Unit/FinSet/: MP.hs  Separator.hs  Validator.hs
onchain/test/Test/Vulcan/Unit/StateMP/: Private.hs  Public.hs
