cabal-version: 3.0
name:          vulcan-common
version:       0.1
synopsis:      TODO
description:   TODO
homepage:      https://github.com/ikigai-github/vulcan-smart-contracts
bug-reports:   https://github.com/ikigai-github/vulcan-smart-contracts
license:
license-file:
author:        MLabs
maintainer:    TODO
copyright:     TODO
category:      TODO
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/ikigai-github/vulcan-smart-contracts

flag new-ledger-namespace
  description: Use the new plutus-ledger-api namespace (0a8b1ad)
  manual:      True
  default:     True

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists

  build-depends:      base
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Ledger.Orphans
    Ledger.Exports.V1
    Ledger.Exports.V2
    Vulcan.Common.Constants
    Vulcan.Common.Types.Auction
    Vulcan.Common.Types.Instances
    Vulcan.Common.Types.FinSet
    Vulcan.Common.Types.SpecialUtxo
    Vulcan.Common.Utils
    Vulcan.Initialisation.Parameters

  if flag(new-ledger-namespace)
    cpp-options: -DNEW_LEDGER_NAMESPACE

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , text

  hs-source-dirs:  src
